# Prism4D-bio

./: .gitignore  Cargo.toml  MASTER_BLUEPRINT.md  README.md
crates/prism-gpu/: build.rs
crates/prism-gpu/src/: dendritic_snn.rs  lib.rs
crates/prism-gpu/src/kernels/: dendritic_snn_reservoir.cu
crates/prism-io/: Cargo.toml
crates/prism-io/src/: holographic.rs  sovereign_types.rs  streaming.rs  validation.rs
crates/prism-learning/src/: dendritic_agent.rs  features.rs  lib.rs  manifest.rs  rewards.rs  trainer.rs
crates/prism-physics/: Cargo.toml
crates/prism-physics/src/: molecular_dynamics.rs
data/manifests/: calibration_v1.json  combined_calibration.json  expanded_calibration.json  holdout_validation.json  non_spike_calibration.json  spike_calibration.json
